# bw

./: .gitignore  CMakeLists.txt
config/: bwapi.ini
src/: Bot.h  Dll.cpp  main.cpp
src/bot/: Bot.cpp  Bot.h
src/dll/: Dll.cpp
